项目添加基本组件

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 
+logging.level.mapper=debug
+server.port=8081
+spring.datasource.url=jdbc:mysql://gz-cdb-jt0sf00z.sql.tencentcdb.com:59049/monitor?characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=15071282059he
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.type= com.alibaba.druid.pool.DruidDataSource
